--- a/Ejercicio2.html
+++ b/Ejercicio2.html
@@ -18,7 +18,7 @@
 <p>Lorem ipsum <b>CERN</b> dolor sit amet consectetur adipisicing elit. Est ad asperiores nam itaque in quae nostrum! Minima, ex alias corporis voluptas commodi amet animi nostrum nemo nihil enim quia. Vitae.</p>
 
 <h2>El nacimiento de la web</h2>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. (<b>HTTP y HTML</b>) Praesentium voluptas suscipit corporis debitis. Sed architecto temporibus doloribus minus, enim similique. Eius nam quas velit saepe cum sed! <B>World Wide Web</B>, Repudiandae, fugiat molestias.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. (<b>HTTP y HTML</b>) Praesentium voluptas suscipit corporis debitis. Sed architecto temporibus doloribus minus, enim similique. Eius nam quas velit saepe cum sed! <b>World Wide Web</b>, Repudiandae, fugiat molestias.</p>
 
 <p>Lorem ipsum dolor sit amet consectetur <i>Robert Caiullau</i> adipisicing elit. Quidem est minus esse blanditiis saepe non dolorum modi veritatis repellat atque, eligendi quas eos alias ipsum aliquid rerum illum tempora repellendus <i>Mike Sendall</i>.</p>
 
