--- a/Ejercicio_tabla3.html
+++ b/Ejercicio_tabla3.html
@@ -14,18 +14,18 @@
 <body>
 <table border="1">
 <tr>
-<td colspan="3" style="padding: 5px 10px; text-align: center;">A</td>
+<td colspan="3" style="padding: 10px 20px; text-align: center;">A</td>
 <td>B</td>
 </tr>
 
 <tr>
 <td>C</td>
-<td colspan="2" style="padding: 5px 10px; text-align: center;">D</td>
+<td colspan="2" style="padding: 10px 20px; text-align: center;">D</td>
 <td>E</td>
 </tr>
 
 <tr>
-<td colspan="4" style="padding: 5px 10px; text-align: center;">F</td>
+<td colspan="4" style="padding: 10px 20px; text-align: center;">F</td><!--Lo de los pixeles se puede cambiar a gusto de cada uno-->
 </tr>
 
 <tr>
