--- a/Ejercicio5.html
+++ b/Ejercicio5.html
@@ -18,39 +18,39 @@
 <table border="1">
 
 <tr>
-    <td  colspan="1" style="padding: 5px 10px; text-align: center">1</td>
-    <td colspan="2" style="padding: 5px 10px; text-align: center;">2</td>
-    <td colspan="1" style="padding: 5px 10px; text-align: center;">3</td>
-    <td rowspan="5" style="padding: 5px 10 px; text-align: center;">4</td>
+    <td  colspan="1" style="padding: 5px 10px; text-align: center; background-color: antiquewhite;">1</td>
+    <td colspan="2" style="padding: 5px 10px; text-align: center; background-color: aqua;">2</td>
+    <td colspan="1" style="padding: 5px 10px; text-align: center; background-color: blanchedalmond;">3</td>
+    <td rowspan="5" style="padding: 5px 10 px; text-align: center; background-color: aquamarine;">4</td>
 </tr>
 
 <tr>
-    <td colspan="1" style="padding: 5 px 10 px; text-align: center;">5</td>
-    <td colspan="1" style="padding: 5px 10 px; text-align: center;">6</td>
-    <td colspan="2" style="padding: 5px 10 px; text-align: center;">7</td>
+    <td colspan="1" style="padding: 5 px 10 px; text-align: center; background-color: antiquewhite;">5</td>
+    <td colspan="1" style="padding: 5px 10 px; text-align: center; background-color: aquamarine;">6</td>
+    <td colspan="2" style="padding: 5px 10 px; text-align: center; background-color: bisque;">7</td>
 </tr>
 
 <tr>
-    <td colspan="3" style="padding: 5px 10px; text-align: center;">8</td>
-    <td colspan="1" style="padding: 5px 10px; text-align: center;">9</td>
+    <td colspan="3" style="padding: 5px 10px; text-align: center; background-color: blanchedalmond;">8</td>
+    <td colspan="1" style="padding: 5px 10px; text-align: center; background-color: green;">9</td>
 </tr>
 
 <tr>
-    <td colspan="1" style="padding: 5 px 10 px; text-align: center;">10</td>
-    <td colspan="1" style="padding: 5 px 10 px; text-align: center;">11</td>
-    <td colspan="1" style="padding: 5 px 10 px; text-align: center;">12</td>
-    <td colspan="1" style="padding: 5 px 10 px; text-align: center;">13</td>
+    <td colspan="1" style="padding: 5 px 10 px; text-align: center; background-color: blueviolet;">10</td>
+    <td colspan="1" style="padding: 5 px 10 px; text-align: center; background-color: red;">11</td>
+    <td colspan="1" style="padding: 5 px 10 px; text-align: center; background-color: purple;">12</td>
+    <td colspan="1" style="padding: 5 px 10 px; text-align: center; background-color: yellow;">13</td>
 </tr>
 
 <tr>
-    <td colspan="1" style="padding: 5 px 10 px; text-align: center;">14</td>
-    <td colspan="2" rowspan="2" style="padding: 5px 10 px; text-align: center;">15</td>
-    <td colspan="1" style="padding: 5 px 10 px; text-align: center;">16</td>
+    <td colspan="1" style="padding: 5 px 10 px; text-align: center; background-color: yellowgreen;">14</td>
+    <td colspan="2" rowspan="2" style="padding: 5px 10 px; text-align: center; background-color: magenta;">15</td>
+    <td colspan="1" style="padding: 5 px 10 px; text-align: center; background-color: wheat;">16</td>
 </tr>
 
 <tr>
-    <td colspan="1" style="padding: 5 px 10 px; text-align: center;">17</td>
-    <td colspan="2" style="padding: 5 px 10 px; text-align: center;">18</td>
+    <td colspan="1" style="padding: 5 px 10 px; text-align: center; background-color: wheat;">17</td>
+    <td colspan="2" style="padding: 5 px 10 px; text-align: center; background-color: aqua;">18</td>
 </tr>
 
 
