--- a/Ejercicio5.html
+++ b/Ejercicio5.html
@@ -15,7 +15,7 @@
 
 <body>
 
-<table border="1">
+<table border="1" style="width: 500px; height: 600px;">
 
 <tr>
     <td  colspan="1" style="padding: 5px 10px; text-align: center; background-color: antiquewhite;">1</td>
