--- a/Ejercicio10.html
+++ b/Ejercicio10.html
@@ -58,7 +58,7 @@
         <tr style="color: green;">
             <td colspan="1" style="padding: 5px 10px; text-align: center; ">green</td>
             <td colspan="1" style="padding: 5px 10px; text-align: center; background-color: red; ">green</td>
-            ç<td colspan="1" style="padding: 5px 10px; text-align: center; background-color: green; ">green</td>
+            <td colspan="1" style="padding: 5px 10px; text-align: center; background-color: green; ">green</td>
             <td colspan="1" style="padding: 5px 10px; text-align: center; background-color: blue; ">green</td>
         </tr>
 
